Improves dependency analysis and type safety
Enhances dependency analysis by distinguishing between runtime and type-only dependencies.

Improves code quality by adopting functional programming patterns and adding type guard utilities for increased type safety.
Addresses an issue where type-only imports were incorrectly flagged.
Also, excludes test setup files.

Removes the noForEach linting rule.

--- a/biome.json
+++ b/biome.json
@@ -23,7 +23,7 @@
     "rules": {
       "recommended": false,
       "complexity": {
-        "noForEach": "error",
+        "noForEach": "off",
         "noBannedTypes": "error",
         "noExtraBooleanCast": "error",
         "noUselessCatch": "error",
