--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.2.6/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.3.8/schema.json",
   "assist": {
     "actions": {
       "source": {
@@ -91,9 +91,7 @@
         "noWith": "error"
       }
     },
-    "includes": [
-      "**"
-    ]
+    "includes": ["**"]
   },
   "javascript": {
     "formatter": {
@@ -115,9 +113,7 @@
   },
   "overrides": [
     {
-      "includes": [
-        "**/*.test.*"
-      ],
+      "includes": ["**/*.test.*"],
       "javascript": {
         "formatter": {
           "lineWidth": 140
